<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:id="@+id/txtFullName" android:hint="@string/full_name"/>
        <EditText
                android:id="@+id/etPlannedDate"
                android:hint="@string/birthday"
                android:layout_width="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" android:minHeight="48dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="phone"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:id="@+id/txtPhone" android:minHeight="48dp" android:hint="@string/phone"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:id="@+id/txtEmail" android:minHeight="48dp" android:hint="@string/email"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:id="@+id/textAreaContacto" android:minHeight="48dp"
                android:hint="@string/contacto_description"/>
        <Button
                android:text="@string/next"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_height="wrap_content" android:id="@+id/btnNext"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>