<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ContactoDetalle">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblFullName" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:text="@string/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblBirthday" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblPhone" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblEmail" android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:text="@string/contacto_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblDescriptionContact" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/backTo"
                android:layout_width="match_parent"
                android:layout_margin="50dp"
                android:layout_height="wrap_content" android:id="@+id/btnBack"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>